engine-net-2/examples/Errors/AttributeNodeUnknown.grs
new graph "Rules.grg"

exec (n:N,e:E,c:C,tc:TC)=initExtended ;> { n.b = 42 }

quit
